--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,64 @@
-canvas{
+* {
+    box-sizing: border-box;
+}
+
+canvas {
     width: 100%;
     height: 100%;
     background: black;
 }
 
-body, html{
+body,
+html {
     height: 100%;
     margin: 0;
+    overflow: hidden;
+    font-family: 'Oswald', sans-serif;
+}
+
+h1 {
+    margin-top: 15%;
+    font-family: 'Bungee', cursive;
+    font-size: 3em;
+    letter-spacing: .2em;
+}
+
+p{
+    margin-bottom: 7.5%;
+}
+#subText {
+    margin-top: 20%;
+    font-size: 1.25em;
+}
+
+#instructions {
+    text-align: center;
+    display: box;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -300px;
+    margin-left: -400px;
+    width: 800px;
+    height: 600px;
+    z-index: 100;
+    color: white;
+    border: rgba(255, 255, 255, .2) solid 1px;
+    border-radius: 2.5%;
+    background: #555;
+    -webkit-box-shadow: 2px 2px 4px 0px rgba(255, 255, 255, .3);
+    -moz-box-shadow: 2px 2px 4px 0px rgba(255, 255, 255, .3);
+    box-shadow: 2px 2px 4px 0px rgba(255, 255, 255, .3);
+}
+
+@media (max-width: 800px){
+    #subText {
+        font-size: 1em;
+        }
+}
+
+@media (max-width: 600px){
+    #subText{
+        font-size: .75em;
+    }
 }
